[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts.tres" type="DynamicFont" id=1]
[ext_resource path="res://TextAnimation.gd" type="Script" id=2]
[ext_resource path="res://TextBubble.gd" type="Script" id=3]
[ext_resource path="res://Animations/Background.png" type="Texture" id=4]

[node name="Background" type="Sprite"]
position = Vector2( 962, 527 )
scale = Vector2( 1.07674, 1.2 )
texture = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = -772.7
margin_top = -333.333
margin_right = 773.3
margin_bottom = 306.667
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
bbcode_enabled = true
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextTimer" type="Timer" parent="."]

[node name="AnimationTimer" type="Timer" parent="."]
[connection signal="timeout" from="TextTimer" to="Text" method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
